# C

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  app.py  cmake_install.cmake  docker-compose.yml  exercises.txt  main  main.c  main1.c  main11.c  main15.c  main17.c  main2.c  main3  main5.c  main7.c  main8.c  main9.c  oop_example_001.c  oop_example_002.c  oop_example_003.c  read.c  udo docker ps
configured/: CMakeLists.txt  config.h.in
data_structures/: avl_tree.c  binary_search_tree.c  bitmap.c  deque.c  doubly_linked_list.c  dynamic_array.c  generic_array.c  hash_table.c  heap.c  linked_list.c  min_max_heap.c  queue.c  stack.c
data_structures/array_adt/: 0-intro.c  1-insert.c
data_structures/string/: 0-intro.c  1-adt.c
datastructures/: list.c
design_patterns/: active_object.c  command.c  generic_array.c  inverted_loop.c  macros.c  memory_pool.c  observer.c  raii.c  state.c  strategy.c
dockerfiles/: CMakeBuilder.dockerfile  Main.dockerfile  build.sh
docs/: Doxyfile  language_server.md  safety.md
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  globals.html  globals_func.html  main_8c.html  main_8c__incl.map  main_8c__incl.md5  md__2home_2antonio_2Development_2C_2README.html  my__lib_8h_source.html  pages.html
docs/html/search/: pages_0.js
docs/latex/: files.tex  main_8c.tex  main_8c__incl.md5  md__2home_2antonio_2Development_2C_2README.tex  my__lib_8h_source.tex  refman.tex
examples/: read_write.c  read_write2.c  write_image.c
src/: CMakeLists.txt  main.c  main.c2  main3.c  my_lib.c
